[package]
name = "lighting-info-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
image = "0.25"

[profile.release]
lto = "thin"
codegen-units = 1
overflow-checks = false
