[package]
name = "lighting-info-overlay"
version = "0.1.0"
edition = "2024"
license = "Zlib"

[dependencies]
argh = "0.1"
color-eyre = "0.6"
image = { version = "0.25", default-features = false, features = ["png"] }
mimalloc = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vc-ltl = { version = "5.2.2-Beta1", optional = true }

[features]
default = ["mimalloc"]
all-formats = ["image/default-formats"]

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1
overflow-checks = false

[profile.release-small]
inherits = "release"
opt-level = "s"

[lints.clippy]
# presets
complexity = "warn"
correctness = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
# individual lints
assigning_clones = "warn"
create_dir = "warn"
default_trait_access = "warn"
inefficient_to_string = "warn"
redundant_type_annotations = "warn"
self_named_module_files = "warn"
str_to_string = "warn"
string_to_string = "warn"
